[workspace]
members = [
    "mistralrs-server",
    "mistralrs-core",
    "mistralrs-pyo3",
    "mistralrs",
    "mistralrs-bench",
    "mistralrs-vision",
    "mistralrs-quant",
    "mistralrs-paged-attn",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
description = "Fast and easy LLM serving."
homepage = "https://github.com/EricLBuehler/mistral.rs"
repository = "https://github.com/EricLBuehler/mistral.rs"
keywords = ["machine-learning"]
categories = ["science"]
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0.80"
candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "3388a3c" }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "3388a3c" }
serde = "1.0.197"
serde_json = "1.0.114"
indexmap = { version = "2.2.5", features = ["serde"] }
either = { version = "1.10.0", features = ["serde"] }
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
pyo3 = { version = "0.22.4", features = ["full", "extension-module", "either"] }
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
once_cell = "1.19.0"
# All features but avif, avif increases the msrv dramatically
image = { version = "0.25.1", default-features = false, features = ['bmp', 'dds', 'exr', 'ff', 'gif', 'hdr', 'ico', 'jpeg', 'png', 'pnm', 'qoi', 'tga', 'tiff', 'webp']}
reqwest = { version = "0.12.4", features = ["blocking"] }
base64 = "0.22.1"
half = "2.4.0"
rayon = "1.1.0"
url = "2.5.2"
data-url = "0.3.1"
float8 = "0.1.2"
regex = "1.10.6"
metal = { version = "0.27.0", features = ["mps"] }
