[workspace]
members = [
    "mistralrs-server-core",
    "mistralrs-server",
    "mistralrs-cli",
    "mistralrs-core",
    "mistralrs-pyo3",
    "mistralrs",
    "mistralrs-bench",
    "mistralrs-vision",
    "mistralrs-quant",
    "mistralrs-paged-attn",
    "mistralrs-web-chat",
    "mistralrs-audio",
    "mistralrs-mcp",
    "mistralrs-macros",
]
resolver = "2"

[workspace.package]
version = "0.7.0-alpha.1"
edition = "2021"
description = "Blazingly fast LLM inference."
homepage = "https://github.com/EricLBuehler/mistral.rs"
repository = "https://github.com/EricLBuehler/mistral.rs"
keywords = ["machine-learning"]
categories = ["science"]
license = "MIT"
rust-version = "1.86"

[workspace.dependencies]
candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
candle-flash-attn-v3 = { version = "0.9.2" }
candle-flash-attn = { version = "0.9.2" }
candle-metal-kernels = { version = "0.9.2" }
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "88ed791" }
# candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "88ed791" }
# candle-flash-attn-v3 = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "88ed791" }
# candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "88ed791" }
# candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "88ed791" }
# candle-core = { path = "../candle/candle-core" }
# candle-nn = { path = "../candle/candle-nn" }
# candle-flash-attn-v3 = { path = "../candle/candle-flash-attn-v3" }
# candle-flash-attn = { path = "../candle/candle-flash-attn" }
# candle-metal-kernels = { path = "../candle/candle-metal-kernels" }

axum = "0.8.8"
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.149"
indexmap = { version = "2.13.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3"
clap = { version = "4.5.54", features = ["derive", "wrap_help"] }
pyo3 = { version = "0.25.1", features = ["full", "extension-module", "either"] }
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
# All features but avif, avif increases the msrv dramatically
image = { version = "0.25.9", default-features = false, features = [
    'bmp',
    'dds',
    'exr',
    'ff',
    'gif',
    'hdr',
    'ico',
    'jpeg',
    'png',
    'pnm',
    'qoi',
    'tga',
    'tiff',
    'webp',
] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "blocking",
    "rustls",
    "charset",
    "http2",
] }
base64 = "0.22.1"
half = "2.7.1"
rayon = "1.11.0"
url = "2.5.8"
utoipa = "5.4.0"
walkdir = "2.5.0"
data-url = "0.3.2"
float8 = "0.6.0"
regex = "1.12.2"
objc2-metal = "0.3.2"
objc2-foundation = "0.3.2"
safetensors = "0.7.0"
toml = "0.9.11"
hf-hub = { version = "0.4.3", default-features = false, features = [
    "ureq",
    "tokio",
    "rustls-tls",
] }
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5.1"
cli-table = "0.5.0"
dirs = "6.0.0"
thiserror = "2.0.18"
tokenizers = { version = "0.21.4", default-features = false }
tokio-tungstenite = "0.28.0"
tqdm = "0.8.0"
chrono = "0.4.43"
minijinja = { version = "2.14.0", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.14.0", features = ["pycompat"] }
regex-automata = { version = "0.4.13", features = ["meta"] }
rustc-hash = "2.1.1"
vob = "3.0.6"
cfgrammar = "0.14.1"
lrtable = "0.14.1"
galil-seiferas = "0.1.5"
radix_trie = "0.3.0"
bytemuck = "1.24.0"
tokio-rayon = "2.1.0"
rand_isaac = "0.4.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
async-trait = "0.1.89"
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.1.1", default-features = false, features = ["from"] }
akin = "0.4.0"
variantly = "0.4.0"
derive-new = "0.7.0"
sysinfo = "0.36.1"
csv = "1.4.0"
bytemuck_derive = "1.10.2"
uuid = "1.19.0"
schemars = "1.2.0"
serde-saphyr = "0.0.16"
serde_plain = "1.0.2"
as-any = "0.3.2"
llguidance = { version = "1.2.0", default-features = false, features = ["lark"] }
toktrie_hf_tokenizers = "1.2.0"
objc = { version = "0.2.7" }
serde-big-array = "0.5.1"
interprocess = "2.2.3"
urlencoding = "2.1.3"
scraper = "0.25.0"
html2text = "0.16.6"
ordered-float = "5.1.0"
hashbrown = "0.16.1"
parking_lot = "0.12.5"
ahash = "0.8.12"
num-traits = "0.2.19"
libc = "0.2.180"
bm25 = "2.3.2"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "flac", "vorbis", "wav", "isomp4", "ogg", "pcm"] }
lazy_static = "1.5"
paste = "1.0.15"
byteorder = "1.5.0"
yoke = { version = "0.8.1", features = ["derive"] }
memmap2 = "0.9.9"
pyo3-build-config = "0.25.1"
ctrlc = "3.5.1"
directories = "6.0.0"
# Need to keep rustyline at 15.0.0 as 16.0.0 has a breaking change that conficts with `ctrlc`'s handling
rustyline = { version = "15.0.0", default-features = false, features = ["with-file-history"] }
tower-http = "0.6.8"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
futures-util = "0.3.31"
axum_static = "1.8.6"
mime_guess = "2.0.5"
include_dir = "0.7.4"
http = "1.4.0"
hyper = "1.8.1"
rust-mcp-sdk = { version = "0.8.2", default-features = false, features = ["server", "hyper-server"] }
rust-mcp-schema = { version = "0.9.5", default-features = false, features = ["schema_utils", "latest"] }
bindgen_cuda = "0.1.5"
rubato = "0.16.2"
rustfft = "6.4.1"
hound = "3.5.1"
apodize = "1.0.0"
statrs = "0.18.0"

mistralrs-core = { path = "mistralrs-core", version = "0.7.0-alpha.1" }
mistralrs-paged-attn = { path = "mistralrs-paged-attn", version = "0.7.0-alpha.1" }
mistralrs-quant = { path = "mistralrs-quant", version = "0.7.0-alpha.1" }
mistralrs-vision = { path = "mistralrs-vision", version = "0.7.0-alpha.1" }
mistralrs-server-core = { path = "mistralrs-server-core", version = "0.7.0-alpha.1" }
mistralrs = { path = "mistralrs", version = "0.7.0-alpha.1" }
mistralrs-audio = { path = "mistralrs-audio", version = "0.7.0-alpha.1" }
mistralrs-mcp = { path = "mistralrs-mcp", version = "0.7.0-alpha.1" }
mistralrs-macros = { path = "mistralrs-macros", version = "0.7.0-alpha.1" }

[profile.release-with-debug]
inherits = "release"
debug = true

# Makes release profiler faster to build
# The improvement is negligible with it.
# [profile.release]
# lto = true
# opt-level = 3

[profile.dev]
debug = true
opt-level = 3
