[package]
name = "fastserv-core"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0"}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
tracing = "0.1.40"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
