[package]
name = "mistralrs-bench"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
mistralrs-core = { version = "0.1.0", path = "../mistralrs-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
either.workspace = true
cli-table = "0.4.7"

[features]
cuda = ["mistralrs-core/cuda"]
