[package]
name = "mistralrs-cli"
readme = "../README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description = "Command-line interface for mistral.rs LLM inference"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "mistralrs"

[[bin]]
name = "mistralrs"
path = "src/main.rs"
doc = false

[dependencies]
mistralrs-core = { workspace = true }
mistralrs-server-core = { workspace = true }
mistralrs-serve = { workspace = true }
mistralrs = { workspace = true }
candle-core = { workspace = true }

clap = { workspace = true }
clap_complete = "4.5"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ctrlc = { workspace = true }
rustyline = { workspace = true }
directories = { workspace = true }
either = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
comfy-table = { workspace = true }
walkdir = { workspace = true }

[features]
default = []
cuda = ["mistralrs-core/cuda", "mistralrs-server-core/cuda", "mistralrs-serve/cuda"]
nccl = ["mistralrs-core/nccl", "mistralrs-server-core/nccl", "mistralrs-serve/nccl"]
cudnn = ["mistralrs-core/cudnn", "mistralrs-server-core/cudnn", "mistralrs-serve/cudnn"]
flash-attn = ["cuda", "mistralrs-core/flash-attn", "mistralrs-server-core/flash-attn", "mistralrs-serve/flash-attn"]
flash-attn-v3 = ["cuda", "mistralrs-core/flash-attn-v3", "mistralrs-server-core/flash-attn-v3", "mistralrs-serve/flash-attn-v3"]
accelerate = ["mistralrs-core/accelerate", "mistralrs-server-core/accelerate", "mistralrs-serve/accelerate"]
metal = ["mistralrs-core/metal", "mistralrs-server-core/metal", "mistralrs-serve/metal"]
mkl = ["mistralrs-core/mkl", "mistralrs-server-core/mkl", "mistralrs-serve/mkl"]
ring = ["mistralrs-core/ring", "mistralrs-server-core/ring", "mistralrs-serve/ring"]
