[package]
name = "mistralrs-core"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
serde.workspace = true
serde_json.workspace = true
candle-flash-attn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.8.0", rev = "3388a3c", optional = true }
dirs = "5.0.1"
hf-hub = { version = "0.3.3", package = "candle-hf-hub" }
thiserror = "1.0.57"
tokenizers = "0.21.0"
tqdm = "0.7.0"
chrono = "0.4.34"
minijinja = { version = "2.0.2", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.0.2", features = ["pycompat"] }
either.workspace = true
indexmap.workspace = true
half.workspace = true
accelerate-src = { workspace = true, optional = true }
intel-mkl-src = { workspace = true, optional = true }
tracing.workspace = true
rand = "0.8.5"
regex-automata = { version = "0.4.6", features = ["meta"] }
rustc-hash = "2.0.0"
vob = "3.0.3"
cfgrammar = "0.13.3"
lrtable = "0.13.3"
galil-seiferas = "0.1.5"
clap.workspace = true
radix_trie = "0.2.1"
bytemuck = "1.15.0"
rayon.workspace = true
tokio.workspace = true
tokio-rayon = "2.1.0"
rand_isaac = "0.3.0"
futures.workspace = true
pyo3 = { workspace = true, optional = true }
indicatif = { version = "0.17.8", features = ["rayon"] }
async-trait = "0.1.80"
once_cell.workspace = true
toml = "0.8.12"
strum = { version = "0.26", features = ["derive"] }
image.workspace = true
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
] }
akin = "0.4.0"
variantly = "0.4.0"
tracing-subscriber.workspace = true
derive-new = "0.7.0"
itertools = "0.13.0"
sysinfo = "0.30.12"
mistralrs-vision = { version = "0.4.0", path = "../mistralrs-vision" }
csv = "1.3.0"
reqwest.workspace = true
base64.workspace = true
bytemuck_derive = "1.7.0"
mistralrs-paged-attn = { version = "0.4.0", path = "../mistralrs-paged-attn", optional = true }
mistralrs-quant = { version = "0.4.0", path = "../mistralrs-quant" }
uuid = { version = "1.10.0", features = ["v4"] }
schemars = "0.8.21"
serde_yaml = "0.9.34"
regex.workspace = true
safetensors = "0.4.5"
serde_plain = "1.0.2"
as-any = "0.3.1"
float8.workspace = true
llguidance = { git = "https://github.com/microsoft/llguidance", rev = "cfef3df97372a7b84d74976ff41cc9cb78bca6cc", default-features = false, features = ["lark"] }
toktrie_hf_tokenizers = { git = "https://github.com/microsoft/llguidance", rev = "cfef3df97372a7b84d74976ff41cc9cb78bca6cc" }
objc = { version = "0.2.7", optional = true }
metal = { workspace = true, optional = true }
yoke = "0.7.5"
memmap2 = "0.9.5"

[features]
pyo3_macros = ["pyo3"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:bindgen_cuda", "mistralrs-quant/cuda", "dep:mistralrs-paged-attn", "mistralrs-paged-attn/cuda", "float8/mistralrs_cudarc_fork"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "mistralrs-quant/metal", "dep:objc", "dep:mistralrs-paged-attn", "mistralrs-paged-attn/metal", "dep:metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "mistralrs-quant/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]

[build-dependencies]
bindgen_cuda = { version = "0.1.5", optional = true }
