[package]
name = "mistralrs-lora"
readme = "README.md"
authors = ["Eric Buehler"]
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
half = "2.4.0"
serde.workspace = true
serde_json.workspace = true

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
