[package]
name = "mistralrs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for mistral.rs tool definitions"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23"
